Added CSS practices

--- a/Practices/HTML 5/Computer-class/basic_structure.html
+++ b/Practices/HTML 5/Computer-class/basic_structure.html
@@ -1,19 +1,28 @@
+<!--Esta es mas o menos la estructura basica de html 5 lo que esta es gris son ejemplos-->
+
 <!DOCTYPE html>
 <html>
 
 	<head>
 		<title>Practical Basic Structure.</title>
 		<meta charset="utf-8">
+		<style>
+			/* body {
+				background-color: lightblue;
+			} */
+		</style>
 	</head>
 
 	<body>
-		<p>
+		<!-- <p>
 			Our first page is titled "Practical Basic Structure."
 		</p>
 
 		<p>
 			We have added two paragraphs and in this one we have a word in <b>bold</b>, another is <i>italics</i>, another with <u>underlinig</u> and a strikethrough <s>word</s>
 		</p>
+
+		<p> Nacio en el año <b>noseque</b> </p> -->
 
 	</body>
 
