Updated SECITEC Project

--- a/Practices/HTML 5/test.html
+++ b/Practices/HTML 5/test.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Test de HTML</title>
-</head>
-<body>
-  <h1>Hola probando html en Atom</h1>
-  <p>esto es una prueba</p>
-</body>
+  <head>
+    <title>Test</title>
+  </head>
+
+  <body>
+    <h1>This is test using Doom Emacs</h1>
+    <p>This is a test</p>
+  </body>
 </html>
