--- a/Practices/Javascript/p3/index.html
+++ b/Practices/Javascript/p3/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Test 1</title>
 
-        <script src="test.js"></script>
+        <script src="app.js"></script>
     </head>
 
     <body>
